Fixed alignment of town and postal code

--- a/index.css
+++ b/index.css
@@ -57,6 +57,7 @@ body {
 
 #form-town{
   width: 44em;
+  margin-right: 0.5em;
 }
 
 input[type="text"], 
